wuhu/prod/qbittorrent/qbittorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yaml
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yaml
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/qbittorrent-default: "true"
        io.kompose.service: qbittorrent
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Asia/Shanghai
            - name: WEBUI_PORT
              value: "8081"
          image: lscr.io/linuxserver/qbittorrent:latest
          name: qbittorrent
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
            - containerPort: 6881
              hostPort: 6881
              protocol: TCP
            - containerPort: 6881
              hostPort: 6881
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: qbittorrent-claim0
            - mountPath: /downloads
              name: qbittorrent-claim1
      restartPolicy: Always
      volumes:
        - name: qbittorrent-claim0
          persistentVolumeClaim:
            claimName: qbittorrent-claim0
        - name: qbittorrent-claim1
          persistentVolumeClaim:
            claimName: qbittorrent-claim1
